feat: the best assets feature ever
